--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <canvas id="user-input"></canvas>
-    <script src="./main.js"></script>
+    <script src="./src/main.js"></script>
 </body>
 
 </html>
