--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
     <canvas id="user-input"></canvas>
-    <script src="./src/main.js"></script>
+
+    <div id="predictions"></div>
+
+    <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
